[build-system]
build-backend = "cmeel"
requires = ["cmeel[build]"]

[project]
description = "cmeel distribution for CppAD, A C++ Algorithmic Differentiation Package"
license = "EPL-2.0"
name = "cmeel-cppad"
requires-python = ">= 3.8"
version = "20230000.0"

[project.urls]
homepage = "https://github.com/cmake-wheel/cmeel-cppad"
repository = "https://github.com/cmake-wheel/cmeel-cppad.git"
upstream = "https://github.com/coin-or/CppAD"

[tool.cmeel]
build-number = 4
has-sitelib = false
run-tests = false
source = "CppAD"

[tool.tomlsort]
all = true
